Update qtile config file

--- a/.config/startpage/homepage.html
+++ b/.config/startpage/homepage.html
@@ -25,26 +25,24 @@
         </div>
         <div class="bookmark-container">
             <div class="bookmark-set">
-                <div class="bookmark-title">Linux News</div>
+                <div class="bookmark-title">Linux</div>
                 <div class="bookmark-inner-container">
+                    <a class="bookmark" href="https://www.archlinux.org/" target="_blank">Arch Homepage</a>
+                    <a class="bookmark" href="https://wiki.archlinux.org/" target="_blank">Arch Wiki</a>
                     <a class="bookmark" href="https://www.linuxtoday.com/" target="_blank">LinuxToday</a>
                     <a class="bookmark" href="https://www.linuxinsider.com/" target="_blank">LinuxInsider</a>
                     <a class="bookmark" href="https://omgubuntu.co.uk/" target="_blank">OMG Ubuntu</a>
                     <a class="bookmark" href="https://itsfoss.com/" target="_blank">It's Foss</a>
-                    <a class="bookmark" href="https://phoronix.com/" target="_blank">Phoronix</a>
-                    <a class="bookmark" href="https://www.zdnet.com/topic/linux/" target="_blank">ZDNet</a>
                 </div>
             </div>
             <div class="bookmark-set">
-                <div class="bookmark-title">Arch Linux</div>
+                <div class="bookmark-title">Stock Market</div>
                 <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://www.archlinux.org/" target="_blank">Arch Homepage</a>
-                    <a class="bookmark" href="https://wiki.archlinux.org/" target="_blank">Arch Wiki</a>
-                    <a class="bookmark" href="https://www.archlinux.org/packages/" target="_blank">Arch Packages</a>
-                    <a class="bookmark" href="https://aur.archlinux.org/" target="_blank">AUR Home</a>
-                    <a class="bookmark" href="https://bugs.archlinux.org/" target="_blank">Arch Bugs</a>
-                    <a class="bookmark" href="https://bbs.archlinux.org/" target="_blank">Arch Forums</a>
-                    <a class="bookmark" href="https://www.archlinux.org/planet/" target="_blank">Planet Arch</a>
+                    <a class="bookmark" href="https://www.webull.com/" target="_blank">Webull</a>
+                    <a class="bookmark" href="https://robinhood.com/" target="_blank">Robinhood</a>
+                    <a class="bookmark" href="https://www.tradingview.com/" target="_blank">Trending View</a>
+                    <a class="bookmark" href="https://finviz.com/" target="_blank">Finviz</a>
+                    <a class="bookmark" href="https://stocktwits.com/" target="_blank">StockTwits</a>
                 </div>
             </div>
             <div class="bookmark-set">
@@ -52,15 +50,19 @@
                 <div class="bookmark-inner-container">
                     <a class="bookmark" href="https://erp.vertilux.com/" target="_blank">Vertilux ERP</a>
                     <a class="bookmark" href="https://vertilux.com/" target="_blank">Vertilux Website</a>
+                    <a class="bookmark" href="http://172.16.1.81:3333/GraniteWebApp" target="_blank">Granite Web App</a>
+                    <a class="bookmark" href="https://app.codeship.com/home" target="_blank">Codeship</a>
+                    <a class="bookmark" href="https://rollbar.com/lepepe/all/items/" target="_blank">Rollbar</a>
+                    <a class="bookmark" href="https://scoutapm.com/home" target="_blank">Scout</a>
                 </div>
             </div>
             <div class="bookmark-set">
                 <div class="bookmark-title">Social & Video</div>
                 <div class="bookmark-inner-container">
                     <a class="bookmark" href="https://youtube.com" target="_blank">Youtube</a>
-                    <a class="bookmark" href="https://lbry.tv/@DistroTube:2" target="_blank">LBRY</a>
+                    <a class="bookmark" href="https://lbry.tv" target="_blank">LBRY</a>
                     <a class="bookmark" href="https://github.com/lepepe" target="_blank">GitHub</a>
-                    <a class="bookmark" href="https://mastodon.technology/@distrotube" target="_blank">Mastodon</a>
+                    <a class="bookmark" href="https://mastodon.social/web/timelines/home" target="_blank">Mastodon</a>
                     <a class="bookmark" href="https://netflix.com" target="_blank">Netflix</a>
                 </div>
             </div>
@@ -70,10 +72,6 @@
                     <a class="bookmark" href="https://reddit.com/r/linux" target="_blank">/r/linux</a>
                     <a class="bookmark" href="https://reddit.com/r/archlinux" target="_blank">/r/archlinux</a>
                     <a class="bookmark" href="https://reddit.com/r/commandline" target="_blank">/r/commandline</a>
-                    <a class="bookmark" href="https://reddit.com/r/linux4noobs" target="_blank">/r/linux4noobs</a>
-                    <a class="bookmark" href="https://reddit.com/r/linuxquestions" target="_blank">/r/linuxquestions</a>
-                    <a class="bookmark" href="https://reddit.com/r/linuxmemes" target="_blank">/r/linuxmemes</a>
-                    <a class="bookmark" href="https://reddit.com/r/suckless" target="_blank">/r/suckless</a>
                     <a class="bookmark" href="https://reddit.com/r/unixporn" target="_blank">/r/unixporn</a>
                     <a class="bookmark" href="https://reddit.com/r/vim" target="_blank">/r/vim</a>
                     <a class="bookmark" href="https://reddit.com/r/emacs" target="_blank">/r/emacs</a>
