Make some updates

--- a/.config/startpage/homepage.html
+++ b/.config/startpage/homepage.html
@@ -50,10 +50,11 @@
                 <div class="bookmark-inner-container">
                     <a class="bookmark" href="https://erp.vertilux.com/" target="_blank">Vertilux ERP</a>
                     <a class="bookmark" href="https://vertilux.com/" target="_blank">Vertilux Website</a>
-                    <a class="bookmark" href="http://172.16.1.81:3333/GraniteWebApp" target="_blank">Granite Web App</a>
+                    <a class="bookmark" href="http://172.16.1.81:40086" target="_blank">Granite Web App</a>
                     <a class="bookmark" href="https://app.codeship.com/home" target="_blank">Codeship</a>
                     <a class="bookmark" href="https://rollbar.com/lepepe/all/items/" target="_blank">Rollbar</a>
                     <a class="bookmark" href="https://scoutapm.com/home" target="_blank">Scout</a>
+                    <a class="bookmark" href="https://rubygems.org/" target="_blank">Rubygems</a>
                 </div>
             </div>
             <div class="bookmark-set">
